<resources>
    <string name="app_name">Cloud Chat App</string>
    <string name="error_something_wrong">Something went wrong</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="conference">Conference</string>
    <string name="whats_on">What\'s On</string>
    <string name="tickets">Tickets</string>
    <string name="scan">Scan</string>
    <string name="brands">Brands</string>
    <string name="event">Event</string>
    <string name="view">VIEW</string>
    <string name="join_event">Join Event</string>
    <string name="join_now">Join Now</string>
    <string name="desc">Description</string>
    <string name="spotlight">Spotlight</string>
    <string name="lounge">Lounge</string>
    <string name="timetable">Timetable</string>
    <string name="stage">Stage/Conference</string>
    <string name="speaker">Speaker</string>
    <string name="speakers">Speakers</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="term_condition">By creating an account you agree to our Terms of condition and privacy policy.</string>
    <string name="if_already_registered"><u>If already Registered</u></string>
    <string name="if_not_registered"><u>If not Registered</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_college_name">Company</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="signin">Sign In</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="accept_t_amp_c"><![CDATA[Accept T&C]]></string>
 <string name="name_validation">abcdefghijklmnopqrstuvwxyzABCDERFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="email_validation">abcdefghijklmnopqrstuvwxyzABCDERFGHIJKLMNOPQRSTUVWXYZ1234567890@.</string>
    <string name="number_validation">+1234567890</string>
    <string name="storage_permission_rationale_title">Storege Permission required</string>
    <string name="storage_permission_rationale_message">In order to take this picture, grant permmission</string>
    <string name="storage_permission_denied_message">Storage permission required in order to use camera</string>
    <string name="which_country_you_nare_based_in">Which country you\nare based in?</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="what_is_your_closest_nlarge_city">What is your closest\nlarge city?</string>
    <string name="txtpr"><![CDATA[What sector are you looking\nfor products & services in?]]></string>
    <string name="complete_registration">Complete Registration</string>
    <string name="what_is_your_role">What is your role?</string>
    <string name="discover_events">Discover Events</string>
    <string name="conference_label">Explore PB Conference</string>
    <string name="free">Free</string>
    <string name="attending">Attending</string>
    <string name="about_us">About us</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_email_id">Please enter email id</string>
    <string name="valid_email_id">Please enter valid email id</string>
    <string name="enter_password">Please enter password</string>
    <string name="eight_password">Please enter at least eight character password</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_profile">My Profile</string>
    <string name="manage_company">Manage Company</string>
    <string name="manage_showcase">Manage Showcase</string>
    <string name="enquiry">Enquiry</string>
    <string name="connection">Connection</string>
    <string name="products">Products</string>
    <string name="change_password">Change Password</string>
    <string name="event_switch">Event Switch</string>
    <string name="logout">Log Out</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="registered">Registered</string>
    <string name="play">Play</string>
    <string name="featured_brand">Featured Brands</string>
    <string name="most_visited_brand">Most Visited Brand</string>
    <string name="all">All</string>
    <string name="my_event">My Event</string>
    <string name="john_doe">John Doe</string>
    <string name="connect">Connect</string>
    <string name="request_a_meeting">Request a Meeting</string>
    <string name="company_name">Company Name</string>
    <string name="brand_connect">Brand Connect</string>
    <string name="email">Email</string>
    <string name="max_yopmail_com">max@yopmail.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="na">NA</string>
    <string name="colon">:</string>
    <string name="what_is_your_nrole">What is your\nrole?</string>
    <string name="buyer_sourcing">Buyer/Sourcing</string>
    <string name="what_is_your_place_nof_work">What is your place\nof work</string>
    <string name="salon">Salon</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="which_country_nare_you_based_in">Which country\nare you based in?</string>
    <string name="which_sector_do_you_nwork_in">Which sector do\nyou work in?</string>
    <string name="beauty_hair">Beauty, Hair</string>
    <string name="which_city_are_you_nnearest">Which city are you\nnearest?</string>
    <string name="london">London</string>
    <string name="registration_details">Registration Details</string>
    <string name="you_haven_t_made_any_connections_yet">You haven\'t made any connections yet</string>
    <string name="find_people">Find People</string>
    <string name="jackline_disuza">Jackline Disuza</string>
    <string name="connected">Connected</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="pure_nails">PURE NAILS</string>
    <string name="company_description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blandi tiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias exce pturi sint occaecati cupiditate non provident\n\n Aimil ique sunt in culpa qui officia deserunt mollitia animi, id est lab orum et dolorum fuga. Et harum quidem rerum facilis est et exp edita distinctio. Nam libero tempore, cum soluta nobis est eligen di optio cumque nihil impedit quo minndae.</string>
    <string name="social_platform">SOCIAL PLATFORM</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="enquire_now">Enquire Now</string>
    <string name="aabcd">AABCD</string>
    <string name="_3d_2d_imaging_devices">3D/2D Imaging Devices</string>
    <string name="aesthetic_device">Aesthetic Device</string>
    <string name="brushes_combs">Brushes/Combs</string>
    <string name="by_sector">By Sector</string>
    <string name="explore_by_category">What\'s On</string>
    <string name="aesthetic">Aesthetic</string>
    <string name="sector">Sector</string>
    <string name="beauty">Beauty</string>
    <string name="already_registered">Already Register</string>
    <string name="connections">Connections</string>
    <string name="my_connections">My Connections</string>
    <string name="request_connection">Request Connection</string>
    <string name="send_connection">Send Connection</string>
    <string name="suggested_connection">Suggested Connection</string>
    <string name="block_connection">Block Connection</string>
    <string name="staff_on_the_stand">Staff on the Stand</string>
    <string name="offers">Offers</string>
    <string name="media">Images/Videos</string>
    <string name="brochures">Brochures</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="message">Message</string>
    <string name="description">Description</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="report_user">Report User</string>
    <string name="unblock">Unblock</string>
    <string name="remove_connection">Remove Connection</string>
    <string name="what_is_the_reason_for_your_enquiry">What is the reason for your enquiry?</string>
    <string name="please_enter_what_is_the_reason_for_your_enquiry">Please Enter, What is the reason for your enquiry?</string>
    <string name="how_would_you_like_to_be_contacted_uncheck_those_do_not_apply">How would you like to be contacted? Uncheck those do not apply.</string>
    <string name="phone">Phone Number</string>
    <string name="chat">Chat</string>
    <string name="video_call">Video Call</string>
    <string name="note_by_checking_phone_or_email_you_are_agreeing_to_share_the_contact_information_recorded_in_your_profile_to_the_showcase_holder">Note - by checking phone or email you are agreeing to share the contact information recorded in your profile to the showcase holder.</string>
    <string name="submit_enquiry">Submit Enquiry</string>
    <string name="phone_1">+1565644857483</string>
    <string name="sect">Sector do you directly work in?</string>
    <string name="work">What is your place of work</string>
    <string name="distributor">Distributor</string>
    <string name="role">What is your role?</string>
    <string name="buyer">Buyer/Sourcing</string>
    <string name="address">Address</string>
    <string name="country">Address</string>
    <string name="postal">What is your Postal Code?</string>
    <string name="code">XY456</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="about_me">About Me</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="completed">Complete Registration</string>
    <string name="profile_photo">Profile photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="most_visited_product">Most Visited Products</string>
    <string name="featured_product">Featured Products</string>
    <string name="explore_by_brands">Explore By Brands</string>
    <string name="enter_here">Enter Here</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="new_tag">New</string>
    <string name="eye_review">EYE REVIEW</string>
    <string name="showcase">Showcase :</string>
    <string name="category">Category :</string>
    <string name="sector1">Sector :</string>
    <string name="view_conference">View Conference</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="support_session">Support Session</string>
    <string name="stage_number">Stage Number</string>
    <string name="support_conference">Support Conference</string>
    <string name="rescheduleModel">Reschedule</string>
    <string name="meeting">MEETING</string>
    <string name="reject">Reject</string>
    <string name="pending">Pending</string>
    <string name="reschedule_meeting">Reschedule Meeting</string>
    <string name="request">Request</string>
    <string name="when">When</string>
 <string name="register"><u>Create New Account</u></string>
</resources>