<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.RegisterActivity">

    <include
        android:id="@+id/includeHeader"
        layout="@layout/include_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeHeader">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_12sdp">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_conversation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                style="@style/avantgarde_demi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/formInputLayoutNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/email_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="55"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                style="@style/formInputLayoutNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:hint="@string/first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/name_validation"
                    android:fontFamily="@font/avenir_book"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLength="25"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLastName"
                style="@style/formInputLayoutNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:hint="@string/last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/name_validation"
                    android:fontFamily="@font/avenir_book"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLength="25"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/formInputLayoutPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilLastName"
                app:startIconCheckable="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--<androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignup"
                style="@style/avantgarde_demi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_28"
                android:background="@drawable/bg_rect_white_5"
                android:backgroundTint="@color/black"
                android:text="Create your account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toStartOf="@+id/guideLineStart"
                app:layout_constraintStart_toStartOf="@+id/guideLineEnd"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignup"
                style="@style/avantgarde_demi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_41sdp"
                android:background="@drawable/bg_rect_white_5"
                android:backgroundTint="@color/black"
                android:text="Create your account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>