<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_12sdp"
    tools:context=".ui.auth.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- <include
                 android:id="@+id/includeHeader"
                 layout="@layout/include_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" /> -->

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_56sdp"
                android:src="@drawable/ic_conversation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView"
                style="@style/avantgarde_demi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/signin"
                android:textColor="@color/black"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/formInputLayoutNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/email_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:maxLength="55"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/formInputLayoutPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:hint="Password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                app:startIconCheckable="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="55"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                style="@style/avantgarde_demi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_41sdp"
                android:background="@drawable/bg_rect_white_5"
                android:backgroundTint="@color/black"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword" />


            <TextView
                android:id="@+id/tvForogot"
                style="@style/avenir_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:visibility="gone"
                android:focusable="true"
                android:paddingVertical="@dimen/_5sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/light_dark"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="@+id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />


            <TextView
                android:id="@+id/tvRegister"
                style="@style/avenir_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:visibility="gone"
                android:focusable="true"
                android:paddingVertical="@dimen/_5sdp"
                android:paddingStart="@dimen/_15sdp"
                android:text="@string/register"
                android:textColor="@color/light_dark"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>